tests/init/neg/global-cycle1.check
-- Error: tests/init/neg/global-cycle1.scala:1:7 -----------------------------------------------------------------------
1 |object A {             // error
  |^
  |Cyclic initialization: object A -> object B -> object A. Calling trace:
  |-> val b: Int = A.a	[ global-cycle1.scala:6 ]
  |                ^
  |-> val a: Int = B.b	[ global-cycle1.scala:2 ]
  |                ^
2 |  val a: Int = B.b
3 |}
